# app/Http/Requests/Api/CoursePost/DetailRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\Api\CoursePost;
+
+use App\Http\Requests\BaseRequest;
+
+class DetailRequest extends BaseRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules()
+    {
+        return [
+            'course_post_id' => 'required|exists:course_posts,id',
+        ];
+    }
+}
