# storage/api-docs/api-docs.json
@@ -19,6 +19,256 @@
         }
     ],
     "paths": {
+        "/api/coursePost/coursePostListing": {
+            "post": {
+                "tags": [
+                    "coursePost,coursePostListing"
+                ],
+                "summary": "coursePost",
+                "description": "",
+                "operationId": "coursePostListing",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/coursePost/coursePostDetail": {
+            "post": {
+                "tags": [
+                    "coursePost,coursePostDetail"
+                ],
+                "summary": "coursePost",
+                "description": "",
+                "operationId": "coursePostDetail",
+                "parameters": [
+                    {
+                        "name": "course_post_id",
+                        "in": "query",
+                        "description": "course_post_id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/coursePost/coursePostStore": {
+            "post": {
+                "tags": [
+                    "coursePost,coursePostStore"
+                ],
+                "summary": "coursePost",
+                "description": "",
+                "operationId": "coursePostStore",
+                "parameters": [
+                    {
+                        "name": "title",
+                        "in": "query",
+                        "description": "title",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "short_desc",
+                        "in": "query",
+                        "description": "short_desc",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "full_desc",
+                        "in": "query",
+                        "description": "full_desc",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "author",
+                        "in": "query",
+                        "description": "author",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "is_active",
+                        "in": "query",
+                        "description": "is_active",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": false,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "image"
+                                ],
+                                "properties": {
+                                    "image": {
+                                        "description": "image to upload",
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/coursePost/coursePostUpdate": {
+            "post": {
+                "tags": [
+                    "coursePost,coursePostUpdate"
+                ],
+                "summary": "coursePost",
+                "description": "",
+                "operationId": "coursePostUpdate",
+                "parameters": [
+                    {
+                        "name": "course_post_id",
+                        "in": "query",
+                        "description": "course_post_id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "title",
+                        "in": "query",
+                        "description": "title",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "short_desc",
+                        "in": "query",
+                        "description": "short_desc",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "full_desc",
+                        "in": "query",
+                        "description": "full_desc",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "author",
+                        "in": "query",
+                        "description": "author",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "is_active",
+                        "in": "query",
+                        "description": "is_active",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": false,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "image": {
+                                        "description": "image to upload",
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/coursePost/coursePostDelete": {
+            "post": {
+                "tags": [
+                    "coursePost,coursePostDelete"
+                ],
+                "summary": "coursePost",
+                "description": "",
+                "operationId": "coursePostDelete",
+                "parameters": [
+                    {
+                        "name": "course_post_id",
+                        "in": "query",
+                        "description": "course_post_id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/employeeMaster/employeeMasterStore": {
             "post": {
                 "tags": [
